<resources>
    <string name="app_name">TimeMaster</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="google">Продолжить с Google</string>
    <string name="or">или</string>
    <string name="welcoming">Добро пожаловать в Time Master!</string>
    <string name="login_input_error">Ошибка ввода данных!</string>
    <string name="registration">Регистрация</string>
    <string name="write_email">Введите email</string>
    <string name="name">Введите имя</string>
    <string name="create_login">Придумайте логин</string>
    <string name="create_password">Придумайте пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="register_success">Регистрация прошла успешно!</string>
    <string name="register_error_user_exist">Пользователь уже существует!</string>
    <string name="register_error_fields">Проверьте введённые данные!</string>
    <string name="enter_login_exist_error">Неверный логин или пароль!</string>
    <string name="exit">Выйти</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_gallery">Галерея</string>
    <string name="menu_slideshow">Слайдшоу</string>
    <string name="timer">Таймер</string>
    <string name="graph">Аналитика</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checklist">Список</string>
    <string name="calendar">Календарь</string>
    <string name="note_text_hint">Введите текст заметки</string>
    <string name="note_activity_title">Добавить задачу</string>
    <string name="save_note">Сохранить</string>
    <string name="completed_checkbox">Выполнено</string>
    <string name="settings">Настройки</string>
    <string name="start_long_break_after_text">Начать долгий перерыв после</string>


    <string-array name="work_duration_array">
        <item>20 минут</item>
        <item>25 минут</item>
        <item>30 минут</item>
        <item>40 минут</item>
        <item>55 минут</item>
    </string-array>
    <string-array name="short_break_duration_array">
        <item>3 минут</item>
        <item>5 минут</item>
        <item>10 минут</item>
        <item>15 минут</item>
    </string-array>
    <string-array name="start_long_break_after_array">
        <item>2 сессии</item>
        <item>3 сессии</item>
        <item>4 сессии</item>
        <item>5 сессии</item>
        <item>6 сессии</item>
    </string-array>
    <string-array name="long_break_duration_array">
        <item>10 минут</item>
        <item>15 минут</item>
        <item>20 минут</item>
        <item>25 минут</item>
    </string-array>
    <string name="short_break_duration_key">SHORT_BREAK_DURATION</string>
    <string name="long_break_duration_key">LONG_BREAK_DURATION</string>
    <string name="work_session_count_key">WORK_SESSION_COUNT</string>
    <string name="task_on_hand_count_key">TASK_ON_HAND_COUNT</string>
    <string name="start_long_break_after_key">LONG_BREAK_AFTER_DURATION</string>
    <string name="work_duration_key">WORK_DURATION</string>
    <string name="back_button">Назад</string>


    <string name="current_task">Current Task</string>
    <string name="change_task">Change</string>
    <string name="task_name">Task 1</string>
    <string name="work_sessions_completed">Work sessions completed</string>
    <string name="complete_imageview_content_desc">Complete Image</string>
    <string name="settings_imageview_content_desc">Settings Image</string>
    <string name="start_tametu">Start Tamétû</string>
    <string name="cancel_tametu">Cancel Tamétû</string>
    <string name="start_short_break">Start Short Break</string>
    <string name="skip_short_break">Skip Short Break</string>
    <string name="start_long_break">Start Long Break</string>
    <string name="skip_long_break">Skip Long Break</string>
    <string name="skip_break">Skip Break</string>
    <string name="currently_running_service_type_key">CURRENTLY_RUNNING_SERVICE_TYPE</string>
    <string name="tametu_completion_alert_message">Congrats, Tamétû is over.\n\nIt\'s time for a break.</string>
    <string name="cancel_notification_toast">Cancel</string>
    <string name="package_name">gis2018.udacity.tametu</string>
    <string name="intro">We aimed to build a simple productivity timer that is helpful and lovable.
        Tamétû likes to keep things simple and is therefore an ensemble of just the most required features.
        \n\nIcon made by <a href="https://www.flaticon.com/authors/bqlqn">bqlqn</a> from
        <a href="https://www.flaticon.com">www.flaticon.com</a></string>
    <string name="creation">Students of Google India Udacity Scholarship and NJACK Winter of Code Participants</string>
    <string name="break_over_notification_title">Break\'s over.</string>
    <string name="session_over_notification_content_text">Time to relax. Start a break</string>
    <string name="break_over_notification_content_text">Let\'s get this done.</string>
    <string name="tametu_completion_notification_message">Congrats, you completed a session.</string>
    <string name="splash_act_name">Tamétû</string>
    <string name="tagline">Get things done, faster</string>
    <string name="task_hint">Enter task name</string>


    <string name="pref_color_key_switch" translatable="false">pref_color_switch</string>
    <string name="pref_color_switch">Поменять цвет основной темы?</string>
    <string name="pref_color_switch_summ">Выбрать цвет из предложенных?</string>
    <string name="pref_color_key" translatable="false">pref_color</string>
    <string name="pref_color_title">Выберите цвет</string>
    <string name="pref_color_red">Зелёный</string>
    <array name="pref_colors">
        <item>Белый</item>
        <item>Фиолетовый</item>
        <item>Персиковый</item>
    </array>


    <string-array name="folder_color_array">
        <item>Желтый</item>
        <item>Красный</item>
        <item>Синий</item>
        <item>Зеленый</item>
    </string-array>
    <string name="folder_color_key">FOLDER_COLOR</string>


</resources>