<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1b434d"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="12"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <!--<ImageView
                android:id="@+id/icon_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/icon2"
                android:scaleType="centerInside"
                android:layout_gravity="center"/>-->
        </LinearLayout>


        <TextView
            android:id="@+id/welcome_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_weight="4"
            android:fontFamily="@font/gilroybold"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/welcoming"
            android:textColor="#f5fcfe"
            android:textSize="30dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/gilroyregular"
            android:backgroundTint="#f5fcfe"
            android:textColorHint="#f5fcfe"
            android:textColor="@color/text_color"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/password_edit_text"

            />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="@font/gilroyregular"
            android:backgroundTint="#f5fcfe"
            android:textColorHint="#f5fcfe"
            android:textColor="@color/text_color"
            android:nextFocusDown="@+id/enter_button"/>

        <Button
            android:id="@+id/enter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/gilroyregular"
            android:text="@string/enter"
            app:backgroundTint="#d3c2f8" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/register"

            android:fontFamily="@font/gilroyregular"
            app:backgroundTint="#d3c2f8"
            />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <View
                android:id="@+id/leftStripe"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#7b7b7b"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/or"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/or"
                android:textSize="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/leftStripe"
                app:layout_constraintEnd_toStartOf="@+id/rightStripe"
                android:fontFamily="@font/gilroyregular"
                android:textColor="#f5fcfe"/>

            <View
                android:id="@+id/rightStripe"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#7b7b7b"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/or"
                />




        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/google_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/google"
            android:fontFamily="@font/gilroyregular"
            app:backgroundTint="#d3c2f8"/>

    </LinearLayout>



</LinearLayout>